--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Чат</title>
-    <link rel="stylesheet" href="./index.css" />
+    <title>App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./index.ts"></script>
   </body>
 </html>
